User Home Page Bug

--- a/UI/LocationRecommendation/views/UserHomepage.ejs
+++ b/UI/LocationRecommendation/views/UserHomepage.ejs
@@ -115,7 +115,7 @@
 
 <div style='text-align:center;'>
 	<script type= "text/javascript" src = "\assets\js\countries.js"></script>
-	<form method="get" action="test" >
+	<form>
 	Select Country (with states):   <select ng-model="country" id="country" name ="country"></select> </br></br>
 	Select State: <select ng-model="state" name ="state" id ="state"></select>  </br> </br></hr>
 	Select Type of Location: <select ng-model="type" name ="type" id=" type"><option>Beach</option><option>Hill-Top</option><option>Historical Place</option><option>National Park</option></select>
