--- a/UI/LocationRecommendation/views/Signup.ejs
+++ b/UI/LocationRecommendation/views/Signup.ejs
@@ -1,131 +1,122 @@
-<!DOCTYPE HTML>
-<!--
-	Alpha by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
-<html>
-	<head>
-		<title>SignUp - Travelog</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		
-		<link rel="stylesheet" href="/assets/css/main.css" />
-		<script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    
-    <link rel='stylesheet' href='/stylesheets/style.css' />
-    <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
-    
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
-	<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-    <script src="angularjs/login.js"></script>	
-		
-	</head>
-	<body>
-		<div id="page-wrapper">
+		<!DOCTYPE HTML>
+		<!--
+			Alpha by HTML5 UP
+			html5up.net | @n33co
+			Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+		-->
+		<html>
+			<head>
+				<title>SignUp - Travelog</title>
+				<meta charset="utf-8" />
+				<meta name="viewport" content="width=device-width, initial-scale=1" />
+				<link rel="stylesheet" href="assets/css/main.css" />
+				
+				<link rel="stylesheet" href="/assets/css/main.css" />
+				<script src= "http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
+		    
+		    <link rel='stylesheet' href='/stylesheets/style.css' />
+		    <link rel='stylesheet' href='/stylesheets/bootstrap.min.css' />
+		    
+		    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+			<script src="http://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+		    <script src="angularjs/login.js"></script>	
+				
+			</head>
+			<body ng-app="LocationRecommendation" ng-controller="LocationCtrl">
+				<div id="page-wrapper">
 
-			<!-- Header -->
-				<header id="header">
-										<nav id="nav">
-						<ul>
-							<li><a href="index.html">Home</a></li>
-							<li>
-								<a href="#" class="icon fa-angle-down">Layouts</a>
+					<!-- Header -->
+						<header id="header">
+												<nav id="nav">
 								<ul>
-									<li><a href="generic.html">Generic</a></li>
-									<li><a href="contact.html">Contact</a></li>
-									<li><a href="elements.html">Elements</a></li>
-									<li>
-										<a href="#">Submenu</a>
-										<ul>
-											<li><a href="#">Option One</a></li>
-											<li><a href="#">Option Two</a></li>
-											<li><a href="#">Option Three</a></li>
-											<li><a href="#">Option Four</a></li>
-										</ul>
-									</li>
+									<li><a href="/">Home</a></li>
+									
+									<li><a href="#" class="button">Sign Up</a></li>
 								</ul>
-							</li>
-							<li><a href="#" class="button">Sign Up</a></li>
-						</ul>
-					</nav>
-				</header>
+							</nav>
+						</header>
 
-			<!-- Main -->
-				<section id="main" class="container 75%">
-					<header>
-						<h2>Signup</h2>
-						<p>Sign Up to connect with you.</p>
-					</header>
-					<div class="box">
-						<form method="post" action="Signup1"  ng-app="LocationRecommendation" ng-controller="SignupCtrl">
-							<div class="row uniform 50%">
-<div class="12u">
-								<div class="12u">
-<input type="firstName" ng-model="firstname" name="firstName" id="firstName" value="" placeholder="First Name" />
+					<!-- Main -->
+						<section id="main" class="container 75%">
+							<header>
+								<h2>Signup</h2>
+								<p>Sign Up to connect with you.</p>
+							</header>
+
+							<div class="box">
+								<form id="login" >
+									<div class="row uniform 50%">
+											
+												<div class="12u">
+													<input type="text" ng-model="firstname" name="firstName" id="firstName" value="" placeholder="First Name" />
+												</div>
+												<div class="12u">
+													<input type="text" ng-model="lastname" name="lastName" id="lastName" value="" placeholder="Last Name" />
+												</div>
+												<div class="12u">
+													<input type="email" ng-model="email" name="email" id="email" value="" placeholder="Email" />
+												</div>
+											
 									
-								</div>
-
-
-	<div class="12u">
-<input type="lastName" ng-model="lastname" name="lastName" id="lastName" value="" placeholder="Last Name" />
-									
-								</div>
-
-	<div class="12u">
-		<input type="email" ng-model="email" name="email" id="email" value="" placeholder="Email" />
-		</div>
+											<div class="12u">
+													<input type="password" ng-model="password" name="password" id="password" value="" placeholder="Password" />
+											</div>
+											<div class="12u">
+										    		  <input type="password" name="confirmPassword" id="confirmPassword" value="" placeholder="Confirm password" />
+											</div>
+									</div>
+									<div class="row uniform">
+										<div class="12u">
+											<ul class="actions align-center">
+												<input type="submit"  ng-click="Signup();" value="Sign Up"></input>
+											</ul>
+										</div>
+										<div class="col-md-12" style="margin: 10px;">
+											
+										<div class="alert alert-danger" ng-hide="UserAlreadyPresent">
+											<strong>User is already present</strong>
+										</div>
+										<div class="alert alert-danger" ng-hide="unexpected_error">
+											<strong>Unexpected error, try again</strong>
+										</div>
+										<div class="alert alert-danger" ng-hide="SuccessSignup">
+											<strong>SignUp Successfull!! SignIn to access the account</strong>
+										</div>
+										
+										</div>
+										<!--------
+										<p><%= typeof Message!='undefined' ? Message: '' %></p>    
+										-->
+									</div>
+								</form>
 							</div>
-	<div class="row uniform 50%">
-		<div class="12u">
-		<input type="text" ng-model="password" name="password" id="password" value="" placeholder="Password" />
-		</div>
-	<div class="12u">
-	
-  <input type="text" name="confirmPassword" id="confirmPassword" value="" placeholder="Confirm password" />
-	</div>
+						</section>
+		</body>
+					<!-- Footer -->
+						<footer id="footer">
+							<ul class="icons">
+								<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+								<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+								<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+								<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
+								<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
+								<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
+							</ul>
+							<ul class="copyright">
+								<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							</ul>
+						</footer>
 
-							</div>
-							<div class="row uniform 50%">
-															</div>
-							<div class="row uniform">
-								<div class="12u">
-									<ul class="actions align-center">
-										<li><input type="submit" value="Sign Up" /></li>
-									</ul>
-								</div>
-								<p><%= typeof Message!='undefined' ? Message: '' %></p>
-							</div>
-						</form>
-					</div>
-				</section>
+				</div>
 
-			<!-- Footer -->
-				<footer id="footer">
-					<ul class="icons">
-						<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-						<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-						<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-						<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-						<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-						<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
-					</ul>
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-				</footer>
+				<!-- Scripts -->
+					<script src="assets/js/jquery.min.js"></script>
+					<script src="assets/js/jquery.dropotron.min.js"></script>
+					<script src="assets/js/jquery.scrollgress.min.js"></script>
+					<script src="assets/js/skel.min.js"></script>
+					<script src="assets/js/util.js"></script>
+					<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
+					<script src="assets/js/main.js"></script>
 
-		</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/jquery.dropotron.min.js"></script>
-			<script src="assets/js/jquery.scrollgress.min.js"></script>
-			<script src="assets/js/skel.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<!--[if lte IE 8]><script src="assets/js/ie/respond.min.js"></script><![endif]-->
-			<script src="assets/js/main.js"></script>
-
-	</body>
-</html>
+			
+		</html>
