--- a/UI/LocationRecommendation/views/Signin.ejs
+++ b/UI/LocationRecommendation/views/Signin.ejs
@@ -74,7 +74,7 @@
 							</div>
 							<div class="row uniform 50%">
 								<div class="12u">
-									<input type="text" name="password" ng-model="password" id="password" value="" placeholder="Password" required/>
+									<input type="password" name="password" ng-model="password" id="password" value="" placeholder="Password" required/>
 								</div>
 							</div>
 							<div class="row uniform 50%">
