--- a/UI/LocationRecommendation/views/index.ejs
+++ b/UI/LocationRecommendation/views/index.ejs
@@ -56,7 +56,7 @@
 			<!-- Banner -->
 				<section id="banner">
 					<h2>Travelog</h2>
-					<p>Get Location Recommendation for your next trip.</p>
+					
 					<ul class="actions">
 						<li>
 						<form method="post" action="LoginPage" >
@@ -76,11 +76,11 @@
 
 					<section class="box special">
 						<header class="major">
-							<h2>Introducing the ultimate mobile app
-							<br />
-							for doing stuff with your phone</h2>
-							<p>Blandit varius ut praesent nascetur eu penatibus nisi risus faucibus nunc ornare<br />
-							adipiscing nunc adipiscing. Condimentum turpis massa.</p>
+						<h2>Beyond your dreams....Within our reach !
+							</h2>
+							<p>Enjoy the most exotic and fun places for your next vacation. Our system will filter out the best locations for your next travel based on Country, State and Location Type
+							Also, the fun part is, attach your Facebook Profile to your Travelog account, and get free recommendations for your next trip based on your Facebook checkins. </p>
+							
 						</header>
 						<span class="image featured"><img src="images/image4.jpg" alt="" /></span>
 					</section>
@@ -89,25 +89,25 @@
 						<div class="features-row">
 							<section>
 								<span class="icon major fa-bolt accent2"></span>
-								<h3>Magna etiam</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Check History</h3>
+								<p>With Travelog you dont have to worry about the location..We will suggest you the locations</p>
 							</section>
 							<section>
 								<span class="icon major fa-area-chart accent3"></span>
-								<h3>Ipsum dolor</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Simple use</h3>
+								<p>This application is very simple to use to any user</p>
 							</section>
 						</div>
 						<div class="features-row">
 							<section>
 								<span class="icon major fa-cloud accent4"></span>
-								<h3>Sed feugiat</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Select your choice</h3>
+								<p>Along with your history We will suggest you locations depending upon your preference as well</p>
 							</section>
 							<section>
 								<span class="icon major fa-lock accent5"></span>
-								<h3>Enim phasellus</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Facebook Checkin</h3>
+								<p>We request you to attach your facebook profile as we will check your facebook checkin to recommend places you like</p>
 							</section>
 						</div>
 					</section>
@@ -117,8 +117,8 @@
 
 							<section class="box special">
 								<span class="image featured"><img src="images/image2.jpg" alt="" /></span>
-								<h3>Sed lorem adipiscing</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Explore Bali</h3>
+								<p>In Bali you can have immense pleasure with natures scenary!!!and get a deep bath in crystal clear water</p>
 								<ul class="actions">
 									<li><a href="#" class="button alt">Learn More</a></li>
 								</ul>
@@ -129,8 +129,8 @@
 
 							<section class="box special">
 								<span class="image featured"><img src="images/image3.jpg" alt="" /></span>
-								<h3>Accumsan integer</h3>
-								<p>Integer volutpat ante et accumsan commophasellus sed aliquam feugiat lorem aliquet ut enim rutrum phasellus iaculis accumsan dolore magna aliquam veroeros.</p>
+								<h3>Napa Valley</h3>
+								<p>Napa Valley is the premier destination for wine lovers in the United States. Its wines are considered to be some of the best in the world with best serene beaches aside</p>
 								<ul class="actions">
 									<li><a href="#" class="button alt">Learn More</a></li>
 								</ul>
