--- a/UI/LocationRecommendation/views/UserHomepage.ejs
+++ b/UI/LocationRecommendation/views/UserHomepage.ejs
@@ -143,7 +143,7 @@
 	
 	</select>
 	<br>
-	<input type="submit"  ng-click="getData();" value="Get Trip Locations"></input>
+	<input type="submit"  ng-click="getData1();" value="Get Trip Locations"></input>
 	</form>
 	
 	
