--- a/UI/LocationRecommendation/views/UserHomepage.ejs
+++ b/UI/LocationRecommendation/views/UserHomepage.ejs
@@ -58,11 +58,14 @@
 							-->
 							<ul>
 								<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Home</span></a></li>
+								<li><button id="top-link" class="skel-layers-ignoreHref" onclick="Login()"><span class="icon fa-home">Attach my FB Profile</span></button></li>
 								<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-plane">Plan my Trip</span></a></li>
 								<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-pencil-square-o">Edit my Profile</span></a></li>
 								<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-history">My TravelLog History</span></a></li>
 							</ul>
 						</nav>
+						
+						
 
 				</div>
 
@@ -79,7 +82,144 @@
 
 				</div>
 
+
+
+
+
 			</div>
+			
+			
+<script>
+var access,uid;
+
+var accessToken;
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '1687049591543840', // Set YOUR APP ID
+      //channelUrl : 'http://hayageek.com/examples/oauth/facebook/oauth-javascript/channel.html', // Channel File
+      status     : true, // check login status
+      cookie     : true, // enable cookies to allow the server to access the session
+      xfbml      : true  // parse XFBML
+    });
+ 
+    FB.Event.subscribe('auth.authResponseChange', function(response) 
+    {
+     if (response.status === 'connected') 
+    {
+        document.getElementById("message").innerHTML +=  "<br>Connected to Facebook";
+        //SUCCESS
+ 
+    }    
+    else if (response.status === 'not_authorized') 
+    {
+        document.getElementById("message").innerHTML +=  "<br>Failed to Connect";
+ 
+        //FAILED
+    } else 
+    {
+        document.getElementById("message").innerHTML +=  "<br>Logged Out";
+ 
+        //UNKNOWN ERROR
+    }
+    }); 
+ 
+    };
+ 
+    function Login()
+    {
+ 
+        FB.login(function(response) {
+           if (response.authResponse) 
+           {
+               
+               //getAuthResponse(); 
+               //access= response.authResponse.accessToken;
+               uid =response.authResponse.userID;
+               getLoginStatus();
+               //alert(JSON.stringify(response.authResponse));
+        	   //getUserInfo();
+                //getCheckIns();
+            } else 
+            {
+             console.log('User cancelled login or did not fully authorize.');
+            }
+         },{scope: 'email,user_photos,user_videos'});
+ 
+    }
+ 
+   
+   function getLoginStatus(){
+
+
+    FB.getLoginStatus(function(response){
+
+      if(response.status === 'connected'){
+
+        var uid = response.authResponse.userID;
+        accessToken = response.authResponse.accessToken;
+        
+        
+        
+        
+        alert("This is the access token : "+accessToken);
+		alert("This is the user : "+uid);
+		
+		
+		$.ajax({
+		type: "POST",
+		url: "/getUID",
+		data: 'uid='+uid,
+		success: function(data)
+		{
+			alert("inside success:"+JSON.stringify(data));
+			//console.log("data:"+data);
+			//console.log("login:"+data.login);
+			//window.location.assign('/driverselected');
+		}
+	}); 
+		
+		
+        //getLongTimeToken();
+
+      }
+
+
+
+    });
+
+   } 
+
+
+  function getUserInfo() {
+        FB.api('/me', function(response) {
+ 
+      var str="<b>Name</b> : "+response.name+"<br>";
+          str +="<b>id: </b>"+response.id+"<br>";
+          document.getElementById("status").innerHTML=str;
+
+ 
+    });
+    }
+  
+  
+      
+    function Logout()
+    {
+        FB.logout(function(){document.location.reload();});
+    }
+ 
+  // Load the SDK asynchronously
+  (function(d){
+     var js, id = 'facebook-jssdk', ref = d.getElementsByTagName('script')[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement('script'); js.id = id; js.async = true;
+     js.src = "//connect.facebook.net/en_US/all.js";
+     ref.parentNode.insertBefore(js, ref);
+   }(document));
+ 
+</script>
+			
+			
 
 		<!-- Main -->
 			<div id="main">
