--- a/UI/LocationRecommendation/public/assets/css/main1.css
+++ b/UI/LocationRecommendation/public/assets/css/main1.css
@@ -42,6 +42,7 @@
 	table {
 		border-collapse: collapse;
 		border-spacing: 0;
+		overflow: scroll;
 	}
 
 	body {
@@ -1983,7 +1984,7 @@
 		position: fixed;
 		top: 0;
 		left: 0;
-		width: 375px;
+		width: 200px;
 		height: 100%;
 		color: #fff;
 		background: #222629 url("images/overlay.png");
@@ -2129,7 +2130,7 @@
 
 		#main > section {
 			margin: 0;
-			overflow: hidden;
+			display: -webkit-flex;			
 			padding: 4em 0;
 			box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 			text-align: center;
@@ -2320,6 +2321,8 @@
 			.container {
 				padding: 0 2em 0 2em;
 			}
+
+			.special,.special .jumbotron {height:100%;}
 
 		/* Item */
 
