--- a/UI/LocationRecommendation/views/UserHomepage.ejs
+++ b/UI/LocationRecommendation/views/UserHomepage.ejs
@@ -21,15 +21,16 @@
 							<div id="logo">
 								<span class="image avatar48"><img src="http://www.fashatude.com/static/fashatude/img/user_icon.png" alt="" /></span>
 								<h1 id="title">User HomePage</h1>
-								<p>Explorer</p>
+								<h6>Explorer</h6>
 							</div>
 							<nav id="nav">
 								<ul>
 									<li><a href="#top" id="top-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Home</span></a></li>
-									<li><button id="top-link" class="skel-layers-ignoreHref" onclick="Login()"><span class="icon fa-home">Attach my FB Profile</span></button></li>
+									<li><a href="#" onclick="Login()"><span class="icon fa-home" >Attach my FB Profile</span></a></li>
 									<li><a href="#portfolio" id="portfolio-link" class="skel-layers-ignoreHref"><span class="icon fa-plane">Plan my Trip</span></a></li>
 									<li><a href="#about" id="about-link" class="skel-layers-ignoreHref"><span class="icon fa-pencil-square-o">Edit my Profile</span></a></li>
-									<li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-history">My TravelLog History</span></a></li>
+									<li><a href="/" ng-click="logout()"><span class="icon fa-sign-out">Logout</span></a></li>
+									<!--li><a href="#contact" id="contact-link" class="skel-layers-ignoreHref"><span class="icon fa-history">My TravelLog History</span></a></li-->
 								</ul>
 							</nav>
 					</div>
@@ -51,11 +52,13 @@
 					<div class="container">
 						<header> 
 							<h2>Explore.</h2>
+							<p>"The gladdest moment in human life, me thinks, is a departure into unknown lands."</p>
 						</header>
-						<p>"The gladdest moment in human life, me thinks, is a departure into unknown lands."</p>
+						
 	   					<div style='text-align:center;'>
+	   					<br>	
 							<form>
-						Select Country (with states):   <select ng-model="country" id="country" name ="country"></select> </br></br>
+						Select Country:   <select ng-model="country" id="country" name ="country"></select> </br></br>
 						Select State: <select ng-model="state" name ="state" id ="state"></select>  </br> </br></hr>
 						Select Type of Location: 
 						<select ng-model="type" name ="type" id=" type">
@@ -68,6 +71,8 @@
 						<br>
 						<input type="submit"  ng-click="getData();" value="Get Trip Locations (Without Preference)"></input>
 						<input type="submit"  ng-click="getData1();" value="Get Trip Locations (With Preference)"></input>
+						<br>
+						<br>
 						<div class="horizontal">
 							<table class="table table-striped table-bordered table-responsive">
 	               			<thead>
