Title Page Changes

--- a/UI/LocationRecommendation/views/index.ejs
+++ b/UI/LocationRecommendation/views/index.ejs
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Travelog by Hadoop Hunters</title>
+		<title>Travelog- Plan Your Vacation</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		
